# python_practice

./: .gitignore  OOP.ipynb  README.md  cheatsheet.txt  data_analysis.ipynb  data_visualization.ipynb  fileHandling.ipynb  logger.py  logging_py.ipynb  movies_gross_rank.csv  multiprocessing_example.py  multithreading_example.py  pyproject.toml  sqllite3.ipynb  threadprocess_usecase.py
.ipynb_checkpoints/: data_analysis-checkpoint.ipynb  data_visualization-checkpoint.ipynb  example-checkpoint.txt  fileHandling-checkpoint.ipynb  logging_py-checkpoint.ipynb  sqllite3-checkpoint.ipynb
.virtual_documents/EDA/: flight_price.ipynb  playstore_eda.ipynb  red_wine.ipynb
EDA/: data_analysis.ipynb  data_visualization.ipynb  flight_price.ipynb  playstore_eda.ipynb  red_wine.ipynb
EDA/.ipynb_checkpoints/: flight_price-checkpoint.ipynb  playstore_eda-checkpoint.ipynb  red_wine-checkpoint.ipynb
Python_Fundamentals/: OOP.ipynb  advance_multithreading.py  advance_py.ipynb  fileHandling.ipynb  logger.py  logging_py.ipynb  memory_mgnt.ipynb  multiprocessing_example.py  multithreading_example.py  sqllite3.ipynb  threadprocess_usecase.py  webScraping.py
Streamlit_setup/: app.py  test_app.py  widgets.py
feature_engineering/: data_encoding.ipynb  guided_ordinal_encoding.ipynb  imbalance_data.ipynb  imbalance_data_smote.ipynb  label_ordinal_encoding.ipynb  missing_values.ipynb  outliers_handling.ipynb
feature_engineering/.ipynb_checkpoints/: data_encoding-checkpoint.ipynb  guided_ordinal_encoding-checkpoint.ipynb  imbalance_data-checkpoint.ipynb  label_ordinal_encoding-checkpoint.ipynb  missing_values-checkpoint.ipynb  outliers_handling-checkpoint.ipynb
flask/: app.py  main.py
flask/flask2jinja/: api.py  jinja.py
flask/templates/: about.html  form.html  index.html
machine-learning/Knearest/: knearest.ipynb
mlflow_basics/: mlflow_endtoend.ipynb  requirements.txt  starter.ipynb
outputs/: README.md  cheatsheet.txt  copy_example.txt  example.db  example.txt  large_file.txt  movies_gross_rank.csv  pyproject.toml  sales_data.csv  sales_data2.csv
(+56 files in other folders)
