[tool.poetry]
name = "python-practice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.3.3"
numpy = "^2.3.4"
jupyter = "^1.1.1"
notebook = "^7.4.7"
tensorflow = "^2.20.0"
scikit-learn = "^1.7.2"
seaborn = "^0.13.2"
matplotlib = "^3.10.7"
plotly = "^6.4.0"
mlflow = "^3.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
