[project]
name = "learn-py"
version = "0.1.0"
description = ""
authors = [
    {name = "AadityaKhanal",email = "142284398+ak-codes-py@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "lab (>=8.4,<9.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "html5lib (>=1.1,<2.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "flask (>=3.1.0,<4.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "imblearn (>=0.0,<0.1)",
    "mlflow (>=2.22.1,<3.0.0)",
    "uv (>=0.7.12,<0.8.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
numpy = "^2.2.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
